# fk-trans

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
assets/source/gpt-image2/: fk-trans-logo.png.json
docs/: development.md  release.md
scripts/: check-tauri-command-args.mjs  release-mac.sh  write-latest-json.mjs
src/: App.tsx  index.tsx  tauriArgs.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  popup.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: manager.rs
src-tauri/src/commands/: diagnostics.rs  mod.rs  ocr.rs  settings.rs  translation.rs
src-tauri/src/config/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/mouse/: cursor.rs  listener.rs  mod.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/platform/: macos.rs
src-tauri/src/translate/: claude.rs  custom_http.rs  deeplx.rs  gemini.rs  mod.rs  ollama.rs  openai_compat.rs  provider.rs
src-tauri/src/tray/: menu.rs
src/components/: FloatingPopup.tsx  MarkdownView.tsx  OcrSelectionOverlay.tsx
src/styles/: globals.css
src/types/: translation.ts
