[package]
name = "fk-trans"
version = "0.1.5"
description = "Middle-click driven desktop translation tool"
authors = ["Ray"]
edition = "2021"

[lib]
name = "fk_trans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = "allow"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-positioner = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rdev = "0.5"
enigo = "0.2"
arboard = "3"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
objc = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"
log = "0.4"
env_logger = "0.11"
urlencoding = "2"
dirs = "6"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
